[package]
name = "damascus"
version = "0.1.0"
authors = ["PicoJr <PicoJr@notanemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
itertools = "0.9.0"

[dev-dependencies]
assert_cmd = "1.0.1"
assert_fs = "1.0.0"